@@ -15,7 +15,8 @@ END {
 }
 
 use Test::Warnings ':all';
-use lib 't/lib'; use SilenceStderr;
+use if "$]" >= '5.008', lib => 't/lib';
+use if "$]" >= '5.008', 'SilenceStderr';
 
 # we swap out our $tb for Test::Tester's, so we can also test the results
 # of the END block... (although not all methods are supported!)
