@@ -9,7 +9,8 @@ END {
 
 use Test::Warnings 'warning';       # should not add an END test
 use Test::Warnings ':no_end_test';
-use lib 't/lib'; use SilenceStderr;
+use if "$]" >= '5.008', lib => 't/lib';
+use if "$]" >= '5.008', 'SilenceStderr';
 
 warn 'this warning is not expected to be caught';
 
