@@ -2,6 +2,7 @@ Revision history for Test-Warnings
 
 {{$NEXT}}
           - fixed use of modules loaded by t/zzz-check-breaks.t
+          - fix stderr suppression on perl 5.6
 
 0.025     2016-01-24 02:59:28Z
           - prereqs lowered from required to suggested:
